2014-11-19 Arely <arelycg@cern.ch>
	* Modify dq2get.sh to call run_weights_grid in case the merging of the files is requested.

2014-11-19 Cora <cora.fischer@cern.ch>
	* add tadd_grid routine to compute weights for grid files
	* new run_weights_grid.cxx util to execute tadd_grid
	* will be used in combination with d2-get-script

2014-11-19 Martin <tripiana@cern.ch>
	* Fix PURW_Folder check
	* Add share/GRL/ and share/PURW/
	* Fix FakeMET cleaning (before overlap removal now)
	* Fix passPreselectionCuts flag
	* Change dq2get.sh now can look for any pattern (TAG).

2014-11-18 Arely <arelycg@cern.ch>
	* Add script dq2get.sh to download files from the grid
        * Silvia updated tadd.cxx to compute w (1/<w>) in the merging.
        * Correct the path to the 'default location' for the pileup files.

2014-11-10 Martin <tripiana@cern.ch>
	* Add -u option to generate pile-up root files.
	* Move pile-up files to share/ dir (to make it grid friendly).

2014-11-07 Arely <arelycg@cern.ch>
	* Added protection against no-pile-up reweigting (for 13TeV)
        * Added 'harmonization' flag in JobOpt.
        * Initialize the eventcounter

2014-11-07 Martin <tripiana@cern.ch>
	* Remove PeriodConfig from jO.
	* Add Harmonisation flag to overlap removal config.

2014-11-07 Martin <tripiana@cern.ch>
	* Move to Base,2.0.16.
	* Fix propagation of Met_doMuon jO flag to ST init.
	* Fix electron SF (split in reco,id,trig as requested from jO).
	* Fix systematics config (reset to nom before/after new syst).
	* Fix run_chorizo. Remove tmp dir after moving file to CollateralPath (so to avoid filling up the disk!)
	* Fix batch submission scripts (multiple-syst runs work now).

2014-11-05 Arely <arelycg@cern.ch>
	* Fix e_MT variable (no need to recompute MET for this one).
        * Correct m_MT in case muons are not invisible.
        * Set harmonization=false for the OR.
        * Configure SUSYTools with METMuonTerm="" to allow for muons=invisble.

2014-11-02 Martin <tripiana@cern.ch>