@@ -14,7 +14,6 @@ HIGH PRIORITY
    	 Znunu/sample1/AOD.pool.root
    	 Znunu/sample2/AOD.pool.root
 
-** Check Pileup jOption config.  PeriodConfig = MC12a??
 
 ** set drivers for batch 
    Running on IFAE's batch (PSB) is done with local driver anyways for now.
@@ -68,6 +67,7 @@ LOW priority
 ** move to Sample class inside RunsMap ? so to specify ecm, location (afs, pic, ...), etc. So to map "sampleKey" --> rlist( Rpair(id, Sample("name",...other attributes)))
 
 ** Add the --systematics option to the run_weights_grid function (and the dq2get call).
+
 
 Errors/Warning to take care of (at least understand if we can safely ignore these)
 --------------------------------------------------------------------------------------------------------
