@@ -1,3 +1,6 @@
+2014-11-20 Martin <tripiana@cern.ch>
+	* Add -i option to specify a given id within a multisample set.
+
 2014-11-19 Arely <arelycg@cern.ch>
 	* Modify dq2get.sh to call run_weights_grid in case the merging of the files is requested.
 
